--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
             <div class="container">
                 <h2>Happy Mother's Day!</h2>
                 <h5>I hope you have an amazing day! I wish I was there with you to give you a big hug, but play this and know I am thinking of you all day! I love you so much, and I am so thankful to have the best mom ever. xoxoxo</h5>
+                <h6>Click the picture below, and turn on your volume! (You can't pause, it just plays through)
 
 
 <div>
